# demo

./: .gitignore  docker-compose.yaml
python/: README.md  build.sh  pyproject.toml
python/petstore/: buf.gen.yaml  buf.yaml  petstore.proto  petstore_pb2.py  petstore_pb2_grpc.py  petstore_service.py
python/petstore/infra/: .terraform.lock.hcl  main.tf  terraform.tfstate.backup
